cabal-version:       2.4
name:                extensions
version:             0.0.0.0
synopsis:            Parse Haskell Language Extensions
description:         Parse Haskell Language Extensions
homepage:            https://github.com/kowainik/extensions
bug-reports:         https://github.com/kowainik/extensions/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Kowainik
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2020 Kowainik
category:            GHC, Parsing, Haskell
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/kowainik/extensions.git

common common-options
  build-depends:       base ^>= 4.13.0.0

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Extensions
                         Extensions.Cabal
                         Extensions.OnOff
                         Extensions.Parser

  build-depends:       bytestring ^>= 0.10
                     , Cabal ^>= 3.0
                     , containers ^>= 0.6
                     , directory ^>= 1.3
                     , filepath ^>= 1.4
                     , ghc-boot-th ^>= 8.8.1
                     , parsec ^>= 3.1
                     , unordered-containers ^>= 0.2

test-suite extensions-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Test.Extensions.Cabal
                       Test.Extensions.OnOff
                       Test.Extensions.Parser
  build-depends:       extensions
                     , containers
                     , ghc-boot-th
                     , hspec
                     , text ^>= 1.2
                     , unordered-containers
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
