cabal-version:       2.4
name:                extensions
version:             0.0.0.0
synopsis:            Parse Haskell Language Extensions
description:         Parse Haskell Language Extensions
homepage:            https://github.com/kowainik/extensions
bug-reports:         https://github.com/kowainik/extensions/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Kowainik
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2020 Kowainik
category:            GHC, Parsing, Haskell
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3
                     GHC == 8.10.1

source-repository head
  type:                git
  location:            https://github.com/kowainik/extensions.git

common common-options
  build-depends:       base >= 4.13.0.0 && < 4.15

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
  if impl(ghc >= 8.10.1)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Extensions
                         Extensions.Cabal
                         Extensions.OnOff
                         Extensions.Parser

  build-depends:       bytestring ^>= 0.10
                     , Cabal >= 3.0 && < 3.3
                     , containers ^>= 0.6
                     , directory ^>= 1.3
                     , filepath ^>= 1.4
                     , ghc-boot-th >= 8.8.1 && < 8.11
                     , parsec ^>= 3.1
                     , text ^>= 1.2.3

executable extensions
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Cli
  build-depends:       extensions
                     , base
                     , colourista ^>= 0.1.0.0
                     , containers
                     , directory
                     , filepath
                     , optparse-applicative ^>= 0.15
                     , text

test-suite extensions-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Test.Extensions
                       Test.Extensions.Cabal
                       Test.Extensions.OnOff
                       Test.Extensions.Parser
  build-depends:       extensions
                     , bytestring
                     , containers
                     , ghc-boot-th
                     , hedgehog ^>= 1.0
                     , hspec
                     , hspec-hedgehog ^>= 0.0.1
                     , text ^>= 1.2
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
